--- a/template/detail.html
+++ b/template/detail.html
@@ -24,13 +24,13 @@
     <div class="row">
         <div class="six columns">
             <label for=" authorInput">Author</label>
-            <a href="https://authors-minisite.netlify.app/get/?id={{ author_id }}">
+            <a href="https://boring-goldstine-c1e144.netlify.app/get/?id={{ author_id }}">
                 <input class="u-full-width" type="button" id=" author" value="{{ author }}" readonly/>
             </a>
         </div>
         <div class="six columns">
             <label for="languageInput">Publisher</label>
-            <a href="https://publishers-minisite.netlify.app/get/?id={{ publisher_id }}">
+            <a href="https://boring-goldstine-c1e144.netlify.app/get/?id={{ publisher_id }}">
                 <input class="u-full-width" type="button" id="publisher" value="{{ publisher }}" readonly/>
             </a>
         </div>
