--- a/template/list.html
+++ b/template/list.html
@@ -3,6 +3,6 @@ This section presents information about books
 <p>
     <ul>
         {{#.}}
-        <li><a href='/get/?id={{ _id }}'> {{ title }}</a></li>
+        <li><a href='https://boring-goldstine-c1e144.netlify.app/get/?id={{ _id }}'> {{ title }}</a></li>
         {{/.}}
     </ul>
